
_____________________________________________________________________________________________________


CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2019 JAN 24b
   * in cycle/res/_generic/res.c
     - in find_residual(), added zoneext 
   * in cycle/resconv/_MUSCL/resconv.c
     - in find_Fstar_interfaces(), only store Fstar at interfaces if FACEINTEG!=FACEINTEG_FIRSTORDER
     - in integrate_Fstar_interface(), made code more efficient
     - in add_dFstar_residual(), added old code for FACEINTEG=FACEINTEG_FIRSTORDER that doesn't use
       the stored Fstar at the interfaces
    


2019 JAN 24a
   * in cycle/res/_generic/res.c
     - in find_residual(), added init_Fstar_interfaces()
   * in cycle/resconv/_MUSCL/resconv.c
     - in write_disc_resconv_template() and read_disc_resconv_actions(), added FACEINTEG
     - in find_Fstar_interface(), changed the AOWENO7 and AOWENO9 boundary conditions (gammalo and gammahi
       are now fixed to 0.95)
     - added find_Fstar_interfaces()
     - added init_Fstar_interfaces()
     - added integrate_Fstar_interface()
     - in add_dFstar_residual(), now call integrate_Fstar_interface() instead of find_Fstar_interface()
   * in cycle/resconv/_MUSCL/
     - added the directory doc
   * in src/common.c
     - in resume_node(), added np->wk->Fp1h=NULL;
   * in src/common.h
     - moved flux_t Fp1h; from npbs_t to npwk_t


2019 JAN 23a
   * in cycle/resconv/_MUSCL2/resconv.c
     - in find_Fstar_interface(), made modifications to AOWENO7 and AOWENO9 fluxes when close to
       boundary: now fix gammalo=gammahi=0.95 for AOWENO when close to bdry node
 

2019 JAN 22a
   * in cycle/resconv/_MUSCL2/resconv.c
     - made modifications


2019 JAN 21b
   * in bin
     - modified cylinder_in_freestream2.wrp, forward_step.wrp, impinge.wrp, titarev_toro.wrp


2019 JAN 21a
   * in bin