@@ -131,7 +131,7 @@ Disc(
     AOWENO_gammahi=0.9999;
     INTERPOL=INTERPOL_AOWENO9;
     EIGENVALCOND=EIGENVALCOND_PECLET; 
-    FACEINTEG=FACEINTEG_SECONDORDER;
+    FACEINTEG=FACEINTEG_CENTRAL3;
   );
   FVS(
     AOWENO_TYPE=AOWENO_TYPE_COMPRESSIVE;
