@@ -132,7 +132,7 @@ Disc(
     AOWENO_gammahi=0.999999;
     INTERPOL=INTERPOL_AOWENO9;
     EIGENVALCOND=EIGENVALCOND_GNOFFO;
-    FACEINTEG=FACEINTEG_SECONDORDER; 
+    FACEINTEG=FACEINTEG_CENTRAL3; 
   );
   MUSCLplus(
     FLUX=FLUX_FDSplus;
