@@ -203,7 +203,7 @@ Disc(
     AOWENO_gammahi=0.99999;
     INTERPOL=INTERPOL_AOWENO7;
     EIGENVALCOND=EIGENVALCOND_GNOFFO;
-    FACEINTEG=FACEINTEG_SECONDORDER;
+    FACEINTEG=FACEINTEG_CENTRAL3;
   );
   TVDRK(
     METHOD=METHOD_TVDRK2;
