@@ -132,7 +132,7 @@ Disc(
     AOWENO_gammahi=0.99999;
     INTERPOL=INTERPOL_AOWENO7;
     EIGENVALCOND=EIGENVALCOND_GNOFFO;
-    FACEINTEG=FACEINTEG_SECONDORDER;
+    FACEINTEG=FACEINTEG_CENTRAL3;
   );
   FVS(
     AOWENO_TYPE=AOWENO_TYPE_DIFFUSIVE;
